docs/0.14/_sources/api/gammapy.modeling.models.LightCurveTemplateTemporalModel.rst.txt
LightCurveTemplateTemporalModel
===============================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: LightCurveTemplateTemporalModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~LightCurveTemplateTemporalModel.parameters
      ~LightCurveTemplateTemporalModel.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~LightCurveTemplateTemporalModel.copy
      ~LightCurveTemplateTemporalModel.create
      ~LightCurveTemplateTemporalModel.evaluate_norm_at_time
      ~LightCurveTemplateTemporalModel.from_dict
      ~LightCurveTemplateTemporalModel.mean_norm_in_time_interval
      ~LightCurveTemplateTemporalModel.read
      ~LightCurveTemplateTemporalModel.sample_time
      ~LightCurveTemplateTemporalModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: parameters
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: copy
   .. automethod:: create
   .. automethod:: evaluate_norm_at_time
   .. automethod:: from_dict
   .. automethod:: mean_norm_in_time_interval
   .. automethod:: read
   .. automethod:: sample_time
   .. automethod:: to_dict
